@@ -122,6 +122,9 @@ AdvancedCCMImpl.prototype =
 
         var finfo = info.funcs[ name ];
 
+        ctx.max_rsp_size = finfo._max_rsp_size;
+        ctx.max_req_size = finfo._max_req_size;
+
         if ( ctx.upload_data &&
              !finfo.rawupload )
         {
