@@ -216,7 +216,7 @@ exports.HTTPComms = class
             httpopts.headers[ 'content-type' ] = FUTOIN_CONTENT_TYPE;
             const byte_length = Buffer.byteLength( rawreq, 'utf8' );
 
-            if ( byte_length > optname.SAFE_PAYLOAD_LIMIT )
+            if ( byte_length > ctx.max_req_size )
             {
                 as.error( FutoInError.InvokerError, "FutoIn message exceeds safety limit" );
             }
@@ -281,7 +281,7 @@ exports.HTTPComms = class
                     let len = 0;
                     const limit_len = ctx.rawresult ?
                         false :
-                        optname.SAFE_PAYLOAD_LIMIT;
+                        ctx.max_rsp_size;
 
                     rsp.setEncoding( 'utf8' );
 
@@ -539,6 +539,13 @@ exports.WSComms = class WSComms
         {
             as.error( FutoInError.CommError, 'Disconnect while in progress' );
         }
+
+        // dirty hack
+        ws._driver._maxLength = Math.max(
+            ws._driver._maxLength,
+            ctx.max_rsp_size,
+            ctx.max_req_size
+        );
 
         const reqas = this.reqas;
 
